# vidgrid

./: .gitignore  CLAUDE.md  CNAME  index.html  metadataWorker.js  package.json  test.ts  tsconfig.json
assets/: libav-6.8.8.0-xvid.js  libav-6.8.8.0-xvid.wasm.js  libav-6.8.8.0-xvid.wasm.wasm  libav-xvid-README.md  mediabunny-ac3.js
scripts/: auditTheme.mjs  deploy.js  deploy.sh  deployLib.ts  deployLocal.ts  playwrightTest.ts  postinstall.js  publish-sliftutils.js  screenshots.mjs  ship.sh  test-webgpu-ort.ts  uploadFaceModels.ts  verifyBundles.js  writeBuildVersion.js
scripts/faces/: .gitignore  README.md  faceIngest.ts  getWork.ts  pyproject.toml  writeResult.ts  writeServer.ts
scripts/faces/src/: bench_faces.py  build_preprocess_model.py  clustering.py  face_pipeline.py  manager.py  process_one.py  run.py
scripts/serve/: README.md  githubDeployHook.ts  serve.py  setup.sh  vidgrid-hook.service  vidgrid-serve.service  vidgrid-watch.service  watch.sh
scripts/videoErrors/: .gitignore  analyze.ts  db.ts  ffmpeg.ts  ffprobeCli.ts  probeCache.ts  rules.ts
test-fixtures/: test.mkv
web/: MetadataExtractor.ts  appState.ts  browser.tsx  compactionStatus.ts  mediabunny-bundle.d.ts  metadataWorker.ts  migrateKeys.ts  platform.ts  router.ts  scanCoordinator.ts  scanWorker.ts  server.ts  sounds.ts  styles.ts  visibility.ts
web/demo/: seedDemo.ts
web/faceEmbed/: arcface.ts  clustering.ts  gpuPreprocess.ts  index.ts  onnx.ts  opfs.ts  scrfd.ts  similarity.ts
web/faces/: FaceAvatar.tsx  FaceTest.tsx  faceBlacklist.ts  faceExtraction.ts  faceScenes.ts  faceSearch.ts
web/heygoogle/: HeyGoogleChip.tsx  HeyGooglePage.tsx  ManagementView.tsx  NotificationModal.tsx  Toasts.tsx  client.ts  deviceProtocol.ts  fingerprint.ts  identity.ts  playerControls.ts  qr.ts  words.ts
web/lists/: AddToList.tsx  EditListModal.tsx  (+2 more)
(+93 files in other folders)
